# hoshi

./: .gitignore  Cargo.toml  NEW_ARCHITECTURE.md  README.md  flake.nix
.github/workflows/: ci.yml
assets/: org.hoshi.HoshiClient.desktop  org.hoshi.HoshiClient.yml
crates/bot-echo/: Cargo.toml
crates/bot-echo/src/: loopback_interface.rs  main.rs
crates/bot-jukebox/: Cargo.toml
crates/bot-jukebox/src/: jukebox.rs  main.rs
crates/client-gtk/: Cargo.toml
crates/client-gtk/src/: app.rs  app_state.rs  args.rs  audio.rs  lib.rs  main.rs
crates/client-gtk/src/views/: call_state.rs  contacts.rs  mod.rs  settings.rs
crates/client-gtk/src/views/contacts/: chat.rs  mod.rs  modals.rs
crates/clientlib/: Cargo.toml
crates/clientlib/src/: audio_chunk.rs  audio_interface.rs  call.rs  chat.rs  config.rs  connection.rs  contact.rs  database.rs  hoshi_client.rs  hoshi_net_client.rs  identity.rs  lib.rs  node.rs  noise.rs  record.rs  relay.rs  store.rs  wire.rs
crates/clientlib/tests/: basic.rs  client_watchers.rs  node.rs  store.rs  user_profile.rs
crates/clientlib/tests/common/: mod.rs
crates/control-plane/: Cargo.toml  README.md
crates/control-plane/src/: api.rs  client.rs  config.rs  database.rs  http.rs  lib.rs  main.rs  noise.rs  routes.rs  state.rs  utils.rs
crates/control-plane/src/routes/: auth.rs  clients.rs  common.rs  mod.rs  relays.rs  root.rs
crates/control-plane/tests/: basic.rs
crates/control-plane/tests/common/: api.rs  mod.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: stack.rs
crates/integration-tests/tests/common/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: common.rs  control_plane.rs  lib.rs  noise.rs  relay.rs
crates/relay/: Cargo.toml  README.md
crates/relay/src/: api.rs  config.rs  connection.rs  http.rs  lib.rs  main.rs  noise.rs  routes.rs  state.rs  status.html  tls.rs
crates/relay/src/routes/: ws.rs
crates/relay/src/state/: auth.rs  registration.rs  sessions.rs
crates/relay/tests/: basic.rs
crates/relay/tests/common/: api.rs  mod.rs
crates/server-util/: Cargo.toml
crates/server-util/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/: README.md  msgpack.md
