[workspace]
members = [
    "crates/control-plane",
    "crates/client-gtk",
    "crates/relay",
    "crates/server-util",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
dashmap = "6"
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1", features = ["v7"] }
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
x25519-dalek = "2"
base64 = "0.22"
snow = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["trace"] }
dirs = "6"
sd-notify = "0.4"
tempfile = "3"
toml = "1"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
adw = { package = "libadwaita", version = "0.9", features = ["v1_8"]}
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_18"]}
