[workspace]
members = [
    "crates/bot-echo",
    "crates/bot-jukebox",
    "crates/client-gtk",
    "crates/clientlib",
    "crates/relay",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dashmap = "6"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1", features = ["v7", "serde"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-websocket = "0.4"
futures = "0.3"
dirs = "6"
clap = { version = "4", features = ["derive"] }
sd-notify = "0.4"
tempfile = "3"
toml = "1"
rmp-serde = "1"
serde_json = "1"
rodio = { version = "0.22.2", default-features = false, features = ["symphonia-all"] }
cpal = "0.15"
adw = { package = "libadwaita", version = "0.9", features = ["v1_8"]}
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_18"]}
rand = "0.10"
blake3 = "1"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
x509-cert = "0.2"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
bimap = "0.6"
