[package]
name = "hoshi-clientlib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-websocket = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
rand_core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
tempfile = { workspace = true }
