[package]
name = "hoshi-clientlib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-websocket = { workspace = true }
dirs = { workspace = true }
rand_core = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
x509-cert = { workspace = true }
bimap = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
tempfile = { workspace = true }
