[package]
name = "hoshi-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
tokio-rusqlite = { workspace = true }
rand_core = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }
base64 = { workspace = true }
snow = { workspace = true }
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
dirs = { workspace = true }
hoshi-protocol = { workspace = true }
hoshi-server-util = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
