[package]
name = "hoshi-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
tokio-rusqlite = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
