[package]
name = "hoshi-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
snow = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

hoshi-clientlib = { path = "../clientlib" }
rmp-serde = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
