[package]
name = "hoshi-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }

hoshi-clientlib = { path = "../clientlib" }
rmp-serde = { workspace = true }
futures = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest-websocket = { workspace = true }
reqwest = { workspace = true }
